Update to GitHub

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,6 +28,10 @@ android {
     }
     compileSdkVersion 32
     buildToolsVersion '32.0.0'
+
+    buildFeatures {
+        viewBinding true
+    }
 }
 
 dependencies {
