--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
             android:name=".DetailAudioActivity"
             android:exported="true" />
         <activity
-            android:name=".RichDadPoorDad"
+            android:name=".EatThatFrog"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
